--- a/Competitor Ranking _Data.ipynb
+++ b/Competitor Ranking _Data.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,9 +241,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Competitor_id        |   Competitor_rank |   Points |\n",
+      "|:---------------------|------------------:|---------:|\n",
+      "| sr:competitor:49363  |                 1 |     7510 |\n",
+      "| sr:competitor:51836  |                 1 |     7510 |\n",
+      "| sr:competitor:87690  |                 3 |     6655 |\n",
+      "| sr:competitor:15568  |                 4 |     6500 |\n",
+      "| sr:competitor:16160  |                 4 |     6500 |\n",
+      "| sr:competitor:16608  |                 6 |     5930 |\n",
+      "| sr:competitor:36593  |                 7 |     5880 |\n",
+      "| sr:competitor:50954  |                 8 |     5840 |\n",
+      "| sr:competitor:52293  |                 9 |     5790 |\n",
+      "| sr:competitor:95801  |                10 |     5785 |\n",
+      "| sr:competitor:15310  |                11 |     5740 |\n",
+      "| sr:competitor:124658 |                12 |     5730 |\n",
+      "| sr:competitor:16409  |                13 |     5210 |\n",
+      "| sr:competitor:637970 |                14 |     5165 |\n",
+      "| sr:competitor:15307  |                15 |     5150 |\n",
+      "| sr:competitor:14898  |                16 |     5145 |\n",
+      "| sr:competitor:16151  |                17 |     3775 |\n",
+      "| sr:competitor:53785  |                18 |     3670 |\n",
+      "| sr:competitor:55989  |                19 |     3320 |\n",
+      "| sr:competitor:210736 |                19 |     3320 |\n"
+     ]
+    }
+   ],
    "source": [
     "#Get all competitors with their rank and points.\n",
     "cursor.execute(\n",
@@ -251,6 +280,7 @@
     "    SELECT competitor_id, competitor_rank, points\n",
     "    FROM competitor_ranking_table\n",
     "    JOIN competitors_table USING (competitor_id)\n",
+    "    Limit 20\n",
     "    '''\n",
     ")\n",
     "results = cursor.fetchall()\n",
@@ -261,9 +291,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Competitor_id       |   Competitor_rank |\n",
+      "|:--------------------|------------------:|\n",
+      "| sr:competitor:49363 |                 1 |\n",
+      "| sr:competitor:51836 |                 1 |\n",
+      "| sr:competitor:72376 |                 1 |\n",
+      "| sr:competitor:74949 |                 2 |\n",
+      "| sr:competitor:87690 |                 3 |\n"
+     ]
+    }
+   ],
    "source": [
     "#Find competitors ranked in the top 5\n",
     "cursor.execute(\n",
@@ -282,13 +326,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Competitor_id        |   Competitor_rank  |   Movement |\n",
+      "|:---------------------|-------------------:|-----------:|\n",
+      "| sr:competitor:49363  |                  1 |          0 |\n",
+      "| sr:competitor:51836  |                  1 |          0 |\n",
+      "| sr:competitor:87690  |                  3 |          0 |\n",
+      "| sr:competitor:15568  |                  4 |          0 |\n",
+      "| sr:competitor:16160  |                  4 |          0 |\n",
+      "| sr:competitor:16608  |                  6 |          0 |\n",
+      "| sr:competitor:36593  |                  7 |          0 |\n",
+      "| sr:competitor:50954  |                  8 |          0 |\n",
+      "| sr:competitor:52293  |                  9 |          0 |\n",
+      "| sr:competitor:95801  |                 10 |          0 |\n",
+      "| sr:competitor:15310  |                 11 |          0 |\n",
+      "| sr:competitor:124658 |                 12 |          0 |\n",
+      "| sr:competitor:16409  |                 13 |          0 |\n",
+      "| sr:competitor:637970 |                 14 |          0 |\n",
+      "| sr:competitor:15307  |                 15 |          0 |\n",
+      "| sr:competitor:14898  |                 16 |          0 |\n",
+      "| sr:competitor:16151  |                 17 |          0 |\n",
+      "| sr:competitor:53785  |                 18 |          0 |\n",
+      "| sr:competitor:55989  |                 19 |          0 |\n",
+      "| sr:competitor:210736 |                 19 |          0 |\n",
+      "| sr:competitor:38181  |                 21 |          0 |\n",
+      "| sr:competitor:15548  |                 22 |          0 |\n",
+      "| sr:competitor:59131  |                 23 |          0 |\n",
+      "| sr:competitor:52202  |                 24 |          0 |\n",
+      "| sr:competitor:112805 |                 25 |          0 |\n",
+      "| sr:competitor:16275  |                 26 |          0 |\n",
+      "| sr:competitor:47834  |                 27 |          0 |\n",
+      "| sr:competitor:106349 |                 28 |          0 |\n",
+      "| sr:competitor:59324  |                 29 |          0 |\n",
+      "| sr:competitor:14553  |                 30 |          0 |\n"
+     ]
+    }
+   ],
    "source": [
     "#List competitors with no rank movement (stable rank)\n",
     "cursor.execute(\n",
-    "    '''select competitor_id,competitor_rank ,movement  from competitor_ranking_table where movement = 0\n",
+    "    '''select competitor_id,competitor_rank ,movement  from competitor_ranking_table where movement = 0 limit 30\n",
     "\n",
     "    '''             \n",
     ")\n",
@@ -300,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -332,9 +415,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+-----------+\n",
+      "| total_competitors   |   country |\n",
+      "+=====================+===========+\n",
+      "| Croatia             |         7 |\n",
+      "+---------------------+-----------+\n",
+      "| El Salvador         |         1 |\n",
+      "+---------------------+-----------+\n",
+      "| Australia           |        52 |\n",
+      "+---------------------+-----------+\n",
+      "| Spain               |        27 |\n",
+      "+---------------------+-----------+\n",
+      "| Argentina           |        28 |\n",
+      "+---------------------+-----------+\n",
+      "| Germany             |        32 |\n",
+      "+---------------------+-----------+\n",
+      "| Netherlands         |        33 |\n",
+      "+---------------------+-----------+\n",
+      "| Italy               |        43 |\n",
+      "+---------------------+-----------+\n",
+      "| Great Britain       |        51 |\n",
+      "+---------------------+-----------+\n",
+      "| India               |        25 |\n",
+      "+---------------------+-----------+\n",
+      "| Finland             |         5 |\n",
+      "+---------------------+-----------+\n",
+      "| New Zealand         |        10 |\n",
+      "+---------------------+-----------+\n",
+      "| USA                 |        95 |\n",
+      "+---------------------+-----------+\n",
+      "| Monaco              |         2 |\n",
+      "+---------------------+-----------+\n",
+      "| Poland              |        15 |\n",
+      "+---------------------+-----------+\n",
+      "| France              |        58 |\n",
+      "+---------------------+-----------+\n",
+      "| Czechia             |        37 |\n",
+      "+---------------------+-----------+\n",
+      "| Belgium             |        12 |\n",
+      "+---------------------+-----------+\n",
+      "| Brazil              |        24 |\n",
+      "+---------------------+-----------+\n",
+      "| Uruguay             |         3 |\n",
+      "+---------------------+-----------+\n",
+      "| Austria             |        11 |\n",
+      "+---------------------+-----------+\n",
+      "| Mexico              |         9 |\n",
+      "+---------------------+-----------+\n",
+      "| Colombia            |         9 |\n",
+      "+---------------------+-----------+\n",
+      "| China               |        34 |\n",
+      "+---------------------+-----------+\n",
+      "| Tunisia             |         3 |\n",
+      "+---------------------+-----------+\n",
+      "| Kazakhstan          |         7 |\n",
+      "+---------------------+-----------+\n",
+      "| Ecuador             |         4 |\n",
+      "+---------------------+-----------+\n",
+      "| Sweden              |         8 |\n",
+      "+---------------------+-----------+\n",
+      "| Portugal            |        10 |\n",
+      "+---------------------+-----------+\n",
+      "| Romania             |        20 |\n",
+      "+---------------------+-----------+\n"
+     ]
+    }
+   ],
    "source": [
     "#Count the number of competitors per country\n",
     "cursor.execute(\n",
@@ -343,6 +496,7 @@
     "    FROM competitor_ranking_table r\n",
     "    JOIN competitors_table c ON r.competitor_id = c.competitor_id\n",
     "    GROUP BY c.country\n",
+    "    Limit 30\n",
     "    '''\n",
     ")\n",
     "results = cursor.fetchall()\n",
@@ -353,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
